@@ -9,7 +9,7 @@
 	<meta name="MSSmartTagsPreventParsing" content="true" />
 	<meta name="robots" content="all" />
 	<meta name="author" content="Paul Guyot, Victor Rehorst, Matt Vaughn, Grant Hutchinson" />
-	<meta name="copyright" content="Copyright 2002-2011 Paul Guyot, Victor Rehorst, Matt Vaughn, Grant Hutchinson" />
+	<meta name="copyright" content="Copyright 2002-2012 Paul Guyot, Victor Rehorst, Matt Vaughn, Grant Hutchinson" />
 	<meta name="description" content="Newton Personal Data Sharing - or NPDS - is an HTTP server and associated support modules that allow you to serve information over the internet using an Apple Newton MessagePad or eMate device." />
 	<meta name="keywords" content="newton, apple, messagepad, emate, http, npds, file sharing, data sharing, server, web server, serving, tracker, tracking, download, packages, software, modules, source code, lightyear media, paul guyot, victor rehorst, matt vaughn, ray rischpater, adam tow, grant hutchinson, yoichi takezawa" />
 	<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
