@@ -11,7 +11,7 @@
 	<meta name="verify-v1" content="L461r+60ZWKd3qrwO1GR9TMQLDRzWG2UFoiI3qJwF7I=" />
 	<meta name="robots" content="all" />
 	<meta name="author" content="Paul Guyot, Victor Rehorst, Matt Vaughn, Grant Hutchinson" />
-	<meta name="copyright" content="Copyright 2002-2011 Paul Guyot, Victor Rehorst, Matt Vaughn, Grant Hutchinson" />
+	<meta name="copyright" content="Copyright 2002-2012 Paul Guyot, Victor Rehorst, Matt Vaughn, Grant Hutchinson" />
 	<meta name="description" content="Newton Personal Data Sharing - or NPDS - is an HTTP server and associated support modules that allow you to serve information over the internet using an Apple Newton MessagePad or eMate device." />
 	<meta name="keywords" content="newton, apple, messagepad, emate, http, npds, file sharing, data sharing, server, web server, serving, tracker, tracking, download, packages, software, modules, source code, lightyear media, paul guyot, victor rehorst, matt vaughn, ray rischpater, adam tow, grant hutchinson, yoichi takezawa" />
 	<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
@@ -40,7 +40,7 @@
 			<p>Information and archives for the <a href="/list/">NPDS mailing list</a> are also available.</p>
 			<p>Follow us on <a href="http://twitter.com/npds">Twitter</a></p>
 			<p>Want to see who&#8217;s Newton web server is online? Use one of the <a href="/trackers/">tracker servers</a>.</p>
-			<p>What else is new around here? Check the <a href="/changelog.txt">change log</a>. <strong>Updated:</strong> 15 January 2011</p>
+			<p>What else is new around here? Check the <a href="/changelog.txt">change log</a>. <strong>Updated:</strong> 01 January 2012</p>
 	
 		</div>
 	
